# laplus-boots-rs

./: Cargo.toml  README.md  build.rs  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
src/boards/: billmock_mini_0v5.rs  const_str.rs  mod.rs
src/types/: const_convert.rs  make_static.rs  mod.rs  ota.rs  section_mark.rs  std_crc.rs
