# SPDX-FileCopyrightText: © 2023 Jinwoo Park (pmnxis@gmail.com)
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "laplus-boots-rs"
edition = "2021"
version = "0.0.0"
authors = ["Jinwoo Park <pmnxis@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "application side of billmock hardware, powered by rust-embedded"

# feature name starting with "hw_" is reserved for mass production config generator
[features]
default = ["board_default"]
board_default = ["hw_billmock_mini_0v5"] # To use rust-analzyer utilizing noDefaultFeatures on vscode
eeprom = []
hw_0v2 = []
hw_billmock_mini_0v5 = []

[dependencies]
embassy-stm32 = { version = "0.1.0", features = ["time-driver-any", "stm32g030c8", "memory-x", "unstable-pac", "exti", "time"] } # "unstable-traits" for use InputPin trait for gpio
embedded-hal = "1.0.0"
panic-abort = "0.3.2"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
static_assertions = "1.1.0"
static_cell = { version = "1.3", features = ["nightly"] }
env_to_array = { git = "https://github.com/pmnxis/env-to-array.git", branch = "dynamic_array_patch", features = ["hex"] }
chacha20 = "0.9.1"

# The above dependency configurations are intentionally set to an external address in this repository
# for the purpose of compiling both the original and NDA code simultaneously.
# However, in reality, during a regular build, due to the patched content in `.cargo/config.toml`,
# the code accesses the locally stored directory directly without connecting to the URL.
# details : https://doc.rust-lang.org/cargo/reference/overriding-dependencies.html#the-patch-section

billmock-otp-dev-info = { git = "https://github.com/pmnxis/billmock-mptool.git" }
hex-literal = "0.4.1"

[build-dependencies]
git2 = "0.20" # Git library for Rust
cargo_metadata = "0.19"
mp-fingerprint-type = { git = "https://github.com/pmnxis/billmock-mptool.git" }
hex = "0.4"

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false # <-
lto = 'fat'
opt-level = "s" # or "z"
overflow-checks = false # <-

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
lto = 'fat'
opt-level = "s"
overflow-checks = true # <-
